Day creation subtitle

--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -32,6 +32,7 @@
 	"DAILY": "Täglich",
 	"DAY": {
 		"ADD": "Datensatz hinzufügen",
+		"CREATION_SUBTITLE": "Mit diesen Aufzeichnungen können Sie jeden Schüler täglich verfolgen",
 		"DELETE": "Registrierung löschen",
 		"EDIT": "Datensatz bearbeiten"
 	},
