--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -32,6 +32,7 @@
 	"DAILY": "Diario",
 	"DAY": {
 		"ADD": "Añadir registro",
+		"CREATION_SUBTITLE": "Con estos registros podrás hacer un seguimiento diario de cada alumno",
 		"DELETE": "Borrar registro",
 		"EDIT": "Editar registro"
 	},
