Add un|archvive message

--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -173,11 +173,13 @@
 		"SERVICE_NOT_AVAILABLE": "Dieser Service wird in Kürze verfügbar sein",
 		"STUDENT_ARCHIVE": "Möchten Sie diesen Studenten wirklich archivieren?",
 		"STUDENT_ARCHIVED_OK": "Student erfolgreich abgelegt",
+		"STUDENT_ARCHIVE_2": "Wenn Sie dies tun, wird es nicht in den Schülerlisten angezeigt und Ihre Unterlagen werden ausgeblendet. Sie können mit diesem Schüler auch keine Datensätze erstellen.",
 		"STUDENT_CREATE_OK": "Ein neuer Schüler hat sich für den Unterricht angemeldet",
 		"STUDENT_DELETE": "Möchten Sie diesen Schüler wirklich löschen?",
 		"STUDENT_DELETE_OK": "Der Student wurde erfolgreich gelöscht",
 		"STUDENT_UNARCHIVE": "Möchten Sie diesen Studenten wirklich aus dem Archiv entfernen?",
 		"STUDENT_UNARCHIVED_OK": "Der Student wurde korrekt aus dem Archiv entfernt",
+		"STUDENT_UNARCHIVE_2": "Wenn Sie dies tun, werden die Schülerlisten erneut angezeigt und ihre Aufzeichnungen werden angezeigt. Sie können auch Datensätze neu erstellen, die diesem Schüler zugeordnet sind.",
 		"STUDENT_UPDATE_OK": "Der Student wurde geändert",
 		"SUBJECT_CREATE_OK": "Der Betreff wurde korrekt erstellt",
 		"SUBJECT_DELETE": "Möchten Sie diesen Betreff wirklich löschen?",
