--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -173,11 +173,13 @@
 		"SERVICE_NOT_AVAILABLE": "Pronto estará disponible este servicio",
 		"STUDENT_ARCHIVE": "¿Estás seguro que quieres archivar este alumno?",
 		"STUDENT_ARCHIVED_OK": "Alumno archivado correctamente",
+		"STUDENT_ARCHIVE_2": "Si lo hace no aparecerá en los listados de alumnos y se ocultarán sus registros. Tampoco podrá crear registros asociados a este alumno.",
 		"STUDENT_CREATE_OK": "Un nuevo alumno se ha apuntado a clase",
 		"STUDENT_DELETE": "¿Estás seguro que quieres borrar este alumno?",
 		"STUDENT_DELETE_OK": "Se ha borrado correctamente el alumno",
 		"STUDENT_UNARCHIVE": "¿Estás seguro que quieres desarchivar este alumno?",
 		"STUDENT_UNARCHIVED_OK": "Alumno desarchivado correctamente",
+		"STUDENT_UNARCHIVE_2": "Si lo hace volverá a aparecer en los listados de alumnos y se mostrarán sus registros. También podrá volver a crear registros asociados a este alumno.",
 		"STUDENT_UPDATE_OK": "Se ha modificado el alumno",
 		"SUBJECT_CREATE_OK": "Se ha creado la asignatura correctamente",
 		"SUBJECT_DELETE": "¿Estás seguro que quieres borrar esta asignatura?",
