--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -173,11 +173,13 @@
 		"SERVICE_NOT_AVAILABLE": "Ce service sera bientôt disponible",
 		"STUDENT_ARCHIVE": "Voulez-vous vraiment archiver cet étudiant?",
 		"STUDENT_ARCHIVED_OK": "Élève déposé avec succès",
+		"STUDENT_ARCHIVE_2": "Si vous le faites, il n'apparaîtra pas dans les listes des étudiants et vos dossiers seront masqués. Vous ne pouvez pas non plus créer des enregistrements associés à cet élève.",
 		"STUDENT_CREATE_OK": "Un nouvel étudiant s'est inscrit en classe",
 		"STUDENT_DELETE": "Voulez-vous vraiment supprimer cet étudiant?",
 		"STUDENT_DELETE_OK": "L'élève a été supprimé avec succès",
 		"STUDENT_UNARCHIVE": "Voulez-vous vraiment désarchiver cet élève?",
 		"STUDENT_UNARCHIVED_OK": "L'élève s'est désarchivé correctement",
+		"STUDENT_UNARCHIVE_2": "Cela réapparaîtra dans les listes des étudiants et leurs dossiers seront affichés. Vous pouvez également recréer des enregistrements associés à cet élève.",
 		"STUDENT_UPDATE_OK": "L'élève a été modifié",
 		"SUBJECT_CREATE_OK": "Le sujet a été créé correctement",
 		"SUBJECT_DELETE": "Voulez-vous vraiment supprimer ce sujet?",
