--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -173,11 +173,13 @@
 		"SERVICE_NOT_AVAILABLE": "This service will be available soon",
 		"STUDENT_ARCHIVE": "Are you sure you want to archive this student?",
 		"STUDENT_ARCHIVED_OK": "Student archived correctly",
+		"STUDENT_ARCHIVE_2": "If you do, it will not appear in the student listings and your records will be hidden. Nor can you create records associated with this student.",
 		"STUDENT_CREATE_OK": "A new student has signed up for class",
 		"STUDENT_DELETE": "Are you sure you want to delete this student?",
 		"STUDENT_DELETE_OK": "The student has been successfully deleted",
 		"STUDENT_UNARCHIVE": "Are you sure you want to unarchive this student?",
 		"STUDENT_UNARCHIVED_OK": "Student unarchived correctly",
+		"STUDENT_UNARCHIVE_2": "Doing so will reappear in student listings and their records will be displayed. You can also re-create records associated with this student.",
 		"STUDENT_UPDATE_OK": "The student has been modified",
 		"SUBJECT_CREATE_OK": "The subject has been created correctly",
 		"SUBJECT_DELETE": "Are you sure you want to delete this subject?",
