Added warning in entity delete dialog

--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -156,6 +156,7 @@
 		"BYE": "Bis bald",
 		"CLASSROOM_CREATE_OK": "Klassenzimmer erfolgreich erstellt",
 		"CLASSROOM_DELETE": "Möchten Sie diesen Klassenraum wirklich löschen?",
+		"CLASSROOM_DELETE_2": "Schüler, die sich in diesem Klassenzimmer befinden, hören auf zu sein",
 		"CLASSROOM_DELETE_OK": "Das Klassenzimmer wurde erfolgreich gelöscht",
 		"CLASSROOM_UPDATE_OK": "Modifiziertes Klassenzimmer",
 		"DAY_CREATE_OK": "Ein neuer Datensatz wurde erstellt",
@@ -173,9 +174,10 @@
 		"SERVICE_NOT_AVAILABLE": "Dieser Service wird in Kürze verfügbar sein",
 		"STUDENT_ARCHIVE": "Möchten Sie diesen Studenten wirklich archivieren?",
 		"STUDENT_ARCHIVED_OK": "Student erfolgreich abgelegt",
-		"STUDENT_ARCHIVE_2": "Wenn Sie dies tun, wird es nicht in den Schülerlisten angezeigt und Ihre Unterlagen werden ausgeblendet. Sie können mit diesem Schüler auch keine Datensätze erstellen.",
+		"STUDENT_ARCHIVE_2": "Wenn Sie dies tun, wird es nicht in den Schülerlisten angezeigt und Ihre Unterlagen werden ausgeblendet. Sie können mit diesem Schüler auch keine Datensätze erstellen",
 		"STUDENT_CREATE_OK": "Ein neuer Schüler hat sich für den Unterricht angemeldet",
 		"STUDENT_DELETE": "Möchten Sie diesen Schüler wirklich löschen?",
+		"STUDENT_DELETE_2": "Beachten Sie, dass die mit diesem Schüler verknüpften täglichen Aufzeichnungen ebenfalls gelöscht werden. Wenn Sie dies nicht möchten, denken Sie daran, dass Sie es jederzeit archivieren können",
 		"STUDENT_DELETE_OK": "Der Student wurde erfolgreich gelöscht",
 		"STUDENT_UNARCHIVE": "Möchten Sie diesen Studenten wirklich aus dem Archiv entfernen?",
 		"STUDENT_UNARCHIVED_OK": "Der Student wurde korrekt aus dem Archiv entfernt",
@@ -183,6 +185,7 @@
 		"STUDENT_UPDATE_OK": "Der Student wurde geändert",
 		"SUBJECT_CREATE_OK": "Der Betreff wurde korrekt erstellt",
 		"SUBJECT_DELETE": "Möchten Sie diesen Betreff wirklich löschen?",
+		"SUBJECT_DELETE_2": "Studierende, die in diesem Fach eingeschrieben sind, hören auf zu sein",
 		"SUBJECT_DELETE_OK": "Der Betreff wurde erfolgreich gelöscht",
 		"SUBJECT_UPDATE_OK": "Betreff geändert",
 		"WELCOME": "Hallo {{name}}!",
