--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -156,6 +156,7 @@
 		"BYE": "¡Hasta pronto!",
 		"CLASSROOM_CREATE_OK": "Se ha creado el aula correctamente",
 		"CLASSROOM_DELETE": "¿Estás seguro que quieres borrar este aula?",
+		"CLASSROOM_DELETE_2": "Los alumnos agrupados en este aula dejarán de estarlo",
 		"CLASSROOM_DELETE_OK": "Se ha borrado correctamente el aula",
 		"CLASSROOM_UPDATE_OK": "Aula modificada",
 		"DAY_CREATE_OK": "Se ha creado un nuevo registro",
@@ -173,9 +174,10 @@
 		"SERVICE_NOT_AVAILABLE": "Pronto estará disponible este servicio",
 		"STUDENT_ARCHIVE": "¿Estás seguro que quieres archivar este alumno?",
 		"STUDENT_ARCHIVED_OK": "Alumno archivado correctamente",
-		"STUDENT_ARCHIVE_2": "Si lo hace no aparecerá en los listados de alumnos y se ocultarán sus registros. Tampoco podrá crear registros asociados a este alumno.",
+		"STUDENT_ARCHIVE_2": "Si lo hace no aparecerá en los listados de alumnos y se ocultarán sus registros. Tampoco podrá crear registros asociados a este alumno",
 		"STUDENT_CREATE_OK": "Un nuevo alumno se ha apuntado a clase",
 		"STUDENT_DELETE": "¿Estás seguro que quieres borrar este alumno?",
+		"STUDENT_DELETE_2": "Ten en cuenta que los registros diarios asociados a este alumno también se borrarán. Si esto no es lo que quieres, recuerda que siempre puedes archivarlo",
 		"STUDENT_DELETE_OK": "Se ha borrado correctamente el alumno",
 		"STUDENT_UNARCHIVE": "¿Estás seguro que quieres desarchivar este alumno?",
 		"STUDENT_UNARCHIVED_OK": "Alumno desarchivado correctamente",
@@ -183,6 +185,7 @@
 		"STUDENT_UPDATE_OK": "Se ha modificado el alumno",
 		"SUBJECT_CREATE_OK": "Se ha creado la asignatura correctamente",
 		"SUBJECT_DELETE": "¿Estás seguro que quieres borrar esta asignatura?",
+		"SUBJECT_DELETE_2": "Los alumnos matriculados en esta asignatura dejarán de estarlo",
 		"SUBJECT_DELETE_OK": "Se ha borrado correctamente la asignatura",
 		"SUBJECT_UPDATE_OK": "Asignatura modificada",
 		"WELCOME": "¡Hola {{name}}!",
