--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -156,6 +156,7 @@
 		"BYE": "À bientôt!",
 		"CLASSROOM_CREATE_OK": "Salle de classe créée avec succès",
 		"CLASSROOM_DELETE": "Voulez-vous vraiment supprimer cette classe?",
+		"CLASSROOM_DELETE_2": "Les élèves regroupés dans cette classe cesseront d'être",
 		"CLASSROOM_DELETE_OK": "La salle de classe a été supprimée avec succès",
 		"CLASSROOM_UPDATE_OK": "Salle de classe modifiée",
 		"DAY_CREATE_OK": "Un nouveau record a été créé",
@@ -173,9 +174,10 @@
 		"SERVICE_NOT_AVAILABLE": "Ce service sera bientôt disponible",
 		"STUDENT_ARCHIVE": "Voulez-vous vraiment archiver cet étudiant?",
 		"STUDENT_ARCHIVED_OK": "Élève déposé avec succès",
-		"STUDENT_ARCHIVE_2": "Si vous le faites, il n'apparaîtra pas dans les listes des étudiants et vos dossiers seront masqués. Vous ne pouvez pas non plus créer des enregistrements associés à cet élève.",
+		"STUDENT_ARCHIVE_2": "Si vous le faites, il n'apparaîtra pas dans les listes des étudiants et vos dossiers seront masqués. Vous ne pouvez pas non plus créer des enregistrements associés à cet élève",
 		"STUDENT_CREATE_OK": "Un nouvel étudiant s'est inscrit en classe",
 		"STUDENT_DELETE": "Voulez-vous vraiment supprimer cet étudiant?",
+		"STUDENT_DELETE_2": "Notez que les enregistrements quotidiens associés à cet élève seront également supprimés. Si ce n'est pas ce que vous voulez, n'oubliez pas que vous pouvez toujours l'archiver",
 		"STUDENT_DELETE_OK": "L'élève a été supprimé avec succès",
 		"STUDENT_UNARCHIVE": "Voulez-vous vraiment désarchiver cet élève?",
 		"STUDENT_UNARCHIVED_OK": "L'élève s'est désarchivé correctement",
@@ -183,6 +185,7 @@
 		"STUDENT_UPDATE_OK": "L'élève a été modifié",
 		"SUBJECT_CREATE_OK": "Le sujet a été créé correctement",
 		"SUBJECT_DELETE": "Voulez-vous vraiment supprimer ce sujet?",
+		"SUBJECT_DELETE_2": "Les étudiants inscrits dans cette matière cesseront d'être",
 		"SUBJECT_DELETE_OK": "Le sujet a bien été supprimé",
 		"SUBJECT_UPDATE_OK": "Sujet modifié",
 		"WELCOME": "Salut {{name}}!",
