--- a/src/assets/i18n/it.json
+++ b/src/assets/i18n/it.json
@@ -156,6 +156,7 @@
 		"BYE": "A presto!",
 		"CLASSROOM_CREATE_OK": "Classe creata con successo",
 		"CLASSROOM_DELETE": "Sei sicuro di voler eliminare questa classe?",
+		"CLASSROOM_DELETE_2": "Gli studenti raggruppati in questa classe cesseranno di esserlo",
 		"CLASSROOM_DELETE_OK": "Classroom è stata eliminata correttamente",
 		"CLASSROOM_UPDATE_OK": "Aula modificata",
 		"DAY_CREATE_OK": "È stato creato un nuovo record",
@@ -173,9 +174,10 @@
 		"SERVICE_NOT_AVAILABLE": "Questo servizio sarà presto disponibile",
 		"STUDENT_ARCHIVE": "Sei sicuro di voler archiviare questo studente?",
 		"STUDENT_ARCHIVED_OK": "Studente archiviato correttamente",
-		"STUDENT_ARCHIVE_2": "In tal caso, non comparirà negli elenchi degli studenti e i tuoi record saranno nascosti. Né è possibile creare record associati a questo studente.",
+		"STUDENT_ARCHIVE_2": "In tal caso, non comparirà negli elenchi degli studenti e i tuoi record saranno nascosti. Né è possibile creare record associati a questo studente",
 		"STUDENT_CREATE_OK": "Un nuovo studente si è iscritto per la lezione",
 		"STUDENT_DELETE": "Sei sicuro di voler eliminare questo studente?",
+		"STUDENT_DELETE_2": "Si noti che anche i record giornalieri associati a questo studente verranno eliminati. Se questo non è ciò che desideri, ricorda che puoi sempre archiviarlo",
 		"STUDENT_DELETE_OK": "Lo studente è stato cancellato con successo",
 		"STUDENT_UNARCHIVE": "Sei sicuro di voler annullare l'archiviazione di questo studente?",
 		"STUDENT_UNARCHIVED_OK": "Studente non archiviato correttamente",
@@ -183,6 +185,7 @@
 		"STUDENT_UPDATE_OK": "Lo studente è stato modificato",
 		"SUBJECT_CREATE_OK": "L'argomento è stato creato correttamente",
 		"SUBJECT_DELETE": "Sei sicuro di voler eliminare questo argomento?",
+		"SUBJECT_DELETE_2": "Gli studenti iscritti a questa materia cesseranno di esserlo",
 		"SUBJECT_DELETE_OK": "L'oggetto è stato cancellato con successo",
 		"SUBJECT_UPDATE_OK": "Soggetto modificato",
 		"WELCOME": "Ciao {{name}}!",
