--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -156,6 +156,7 @@
 		"BYE": "See you soon!",
 		"CLASSROOM_CREATE_OK": "Classroom created successfully",
 		"CLASSROOM_DELETE": "Are you sure you want to delete this classroom?",
+		"CLASSROOM_DELETE_2": "Students grouped in this classroom will cease to be",
 		"CLASSROOM_DELETE_OK": "Classroom has been deleted successfully",
 		"CLASSROOM_UPDATE_OK": "Modified classroom",
 		"DAY_CREATE_OK": "A new record has been created",
@@ -173,9 +174,10 @@
 		"SERVICE_NOT_AVAILABLE": "This service will be available soon",
 		"STUDENT_ARCHIVE": "Are you sure you want to archive this student?",
 		"STUDENT_ARCHIVED_OK": "Student archived correctly",
-		"STUDENT_ARCHIVE_2": "If you do, it will not appear in the student listings and your records will be hidden. Nor can you create records associated with this student.",
+		"STUDENT_ARCHIVE_2": "If you do, it will not appear in the student listings and your records will be hidden. Nor can you create records associated with this student",
 		"STUDENT_CREATE_OK": "A new student has signed up for class",
 		"STUDENT_DELETE": "Are you sure you want to delete this student?",
+		"STUDENT_DELETE_2": "Note that the daily records associated with this student will also be deleted. If this is not what you want, remember that you can always archive it",
 		"STUDENT_DELETE_OK": "The student has been successfully deleted",
 		"STUDENT_UNARCHIVE": "Are you sure you want to unarchive this student?",
 		"STUDENT_UNARCHIVED_OK": "Student unarchived correctly",
@@ -183,6 +185,7 @@
 		"STUDENT_UPDATE_OK": "The student has been modified",
 		"SUBJECT_CREATE_OK": "The subject has been created correctly",
 		"SUBJECT_DELETE": "Are you sure you want to delete this subject?",
+		"SUBJECT_DELETE_2": "Students enrolled in this subject will cease to be",
 		"SUBJECT_DELETE_OK": "The subject has been successfully deleted",
 		"SUBJECT_UPDATE_OK": "Subject modified",
 		"WELCOME": "Hi {{name}}!",
