Duplicate Student and Day option

--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -34,12 +34,14 @@
 		"ADD": "Datensatz hinzufügen",
 		"CREATION_SUBTITLE": "Mit diesen Aufzeichnungen können Sie jeden Schüler täglich verfolgen",
 		"DELETE": "Registrierung löschen",
+		"DUPLICATE": "Datensatz duplizieren",
 		"EDIT": "Datensatz bearbeiten"
 	},
 	"DELETE": "Löschen",
 	"DELETE_CLASSROOM": "Klassenzimmer löschen",
 	"DELETE_ELEMENT": "Element löschen",
 	"DELETE_SUBJECT": "Betreff löschen",
+	"DUPLICATE_STUDENT": "Schüler duplizieren",
 	"EDIT_CLASSROOM": "Klassenzimmer bearbeiten",
 	"EDIT_ELEMENT": "Element bearbeiten",
 	"EDIT_NAME": "Ändern Sie den Namen",
