--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -34,12 +34,14 @@
 		"ADD": "Add record",
 		"CREATION_SUBTITLE": "With these records you can track each student daily",
 		"DELETE": "Clear log",
+		"DUPLICATE": "Duplicate record",
 		"EDIT": "Edit record"
 	},
 	"DELETE": "Delete",
 	"DELETE_CLASSROOM": "Delete classroom",
 	"DELETE_ELEMENT": "Delete Item",
 	"DELETE_SUBJECT": "Delete subject",
+	"DUPLICATE_STUDENT": "Duplicate Student",
 	"EDIT_CLASSROOM": "Edit Classroom",
 	"EDIT_ELEMENT": "Edit Item",
 	"EDIT_NAME": "Rename",
