--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -34,12 +34,14 @@
 		"ADD": "Añadir registro",
 		"CREATION_SUBTITLE": "Con estos registros podrás hacer un seguimiento diario de cada alumno",
 		"DELETE": "Borrar registro",
+		"DUPLICATE": "Duplicar registro",
 		"EDIT": "Editar registro"
 	},
 	"DELETE": "Borrar",
 	"DELETE_CLASSROOM": "Borrar aula",
 	"DELETE_ELEMENT": "Borrar elemento",
 	"DELETE_SUBJECT": "Borrar asignatura",
+	"DUPLICATE_STUDENT": "Duplicar alumno",
 	"EDIT_CLASSROOM": "Editar aula",
 	"EDIT_ELEMENT": "Editar elemento",
 	"EDIT_NAME": "Cambiar nombre",
