--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -34,12 +34,14 @@
 		"ADD": "Ajouter un enregistrement",
 		"CREATION_SUBTITLE": "Avec ces enregistrements, vous pouvez suivre chaque élève quotidiennement",
 		"DELETE": "Supprimer l'inscription",
+		"DUPLICATE": "Enregistrement en double",
 		"EDIT": "Modifier l'enregistrement"
 	},
 	"DELETE": "Supprimer",
 	"DELETE_CLASSROOM": "Supprimer la classe",
 	"DELETE_ELEMENT": "Supprimer l'élément",
 	"DELETE_SUBJECT": "Supprimer le sujet",
+	"DUPLICATE_STUDENT": "Étudiant en double",
 	"EDIT_CLASSROOM": "Modifier la classe",
 	"EDIT_ELEMENT": "Modifier l'élément",
 	"EDIT_NAME": "Rebaptiser",
