--- a/src/assets/i18n/it.json
+++ b/src/assets/i18n/it.json
@@ -34,12 +34,14 @@
 		"ADD": "Aggiungi record",
 		"CREATION_SUBTITLE": "Con questi record puoi monitorare ogni studente ogni giorno",
 		"DELETE": "Elimina record",
+		"DUPLICATE": "Record duplicato",
 		"EDIT": "Modifica record"
 	},
 	"DELETE": "Cancellare",
 	"DELETE_CLASSROOM": "Elimina classe",
 	"DELETE_ELEMENT": "Elimina elemento",
 	"DELETE_SUBJECT": "Elimina soggetto",
+	"DUPLICATE_STUDENT": "Studente duplicato",
 	"EDIT_CLASSROOM": "Modifica classe",
 	"EDIT_ELEMENT": "Modifica oggetto",
 	"EDIT_NAME": "Cambia nome",
