Add logo to header

--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -3,6 +3,7 @@
 	"ADD_STUDENT": "Schüler hinzufügen",
 	"AND": " und ",
 	"APP_SUBTITLE": "Organisieren Sie Ihren Privatunterricht",
+	"APP_TITLE": "Aula 13",
 	"ARCHIVE": "Archiv",
 	"ARCHIVED_STUDENTS": "Archivierte Schüler",
 	"ARCHIVE_STUDENT": "Student archivieren",
