--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -3,6 +3,7 @@
 	"ADD_STUDENT": "Ajouter un étudiant",
 	"AND": " et",
 	"APP_SUBTITLE": "Organisez vos cours particuliers",
+	"APP_TITLE": "Aula 13",
 	"ARCHIVE": "Archive",
 	"ARCHIVED_STUDENTS": "Étudiants archivés",
 	"ARCHIVE_STUDENT": "Étudiant aux archives",
