--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -3,6 +3,7 @@
 	"ADD_STUDENT": "Add student",
 	"AND": " and",
 	"APP_SUBTITLE": "Organize your private lessons",
+	"APP_TITLE": "Aula 13",
 	"ARCHIVE": "Archive",
 	"ARCHIVED_STUDENTS": "Archived Students",
 	"ARCHIVE_STUDENT": "Archive student",
