--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -3,6 +3,7 @@
 	"ADD_STUDENT": "Añadir alumno",
 	"AND": " y",
 	"APP_SUBTITLE": "Organiza tus clases particulares",
+	"APP_TITLE": "Aula 13",
 	"ARCHIVE": "Archivar",
 	"ARCHIVED_STUDENTS": "Alumnos archivados",
 	"ARCHIVE_STUDENT": "Archivar alumno",
