--- a/src/assets/i18n/it.json
+++ b/src/assets/i18n/it.json
@@ -3,6 +3,7 @@
 	"ADD_STUDENT": "Aggiungi studente",
 	"AND": " e",
 	"APP_SUBTITLE": "Organizza le tue lezioni private",
+	"APP_TITLE": "Aula 13",
 	"ARCHIVE": "File",
 	"ARCHIVED_STUDENTS": "Studenti archiviati",
 	"ARCHIVE_STUDENT": "Studente d'archivio",
