--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -191,6 +191,7 @@
 		"SUBJECT_DELETE_2": "Students enrolled in this subject will cease to be",
 		"SUBJECT_DELETE_OK": "The subject has been successfully deleted",
 		"SUBJECT_UPDATE_OK": "Subject modified",
+		"THERE_IS_NO_ELEMENTS": "There are no more elements",
 		"WELCOME": "Hi {{name}}!",
 		"YES_ACCOUNT": "Do you already have an account?"
 	},
@@ -215,6 +216,7 @@
 	"RESET_FILTER": "Reset filter",
 	"REST_STUDENTS": "Other students",
 	"SAVE": "Save",
+	"SEARCH_DAY": "Search diary",
 	"SEARCH_STUDENT": "Search student",
 	"SELECT": "Select",
 	"SETTINGS": "Configuration",
