Hide/Show archived days

--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -110,6 +110,7 @@
 		"PHONES": "Telefone",
 		"PICTURE": "Bild",
 		"SELECT_DATE": "Schnelle Termine",
+		"SHOW_ARCHIVED": "Archivierte Schülerdatensätze anzeigen",
 		"SINCE": "Von",
 		"STUDENT": "Student",
 		"STUDENT_LIST": "Liste der Studierenden",
