--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -110,6 +110,7 @@
 		"PHONES": "Phones",
 		"PICTURE": "Image",
 		"SELECT_DATE": "Quick dates",
+		"SHOW_ARCHIVED": "Show Archived Student Records",
 		"SINCE": "Since",
 		"STUDENT": "Student",
 		"STUDENT_LIST": "Student List",
