--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -110,6 +110,7 @@
 		"PHONES": "Teléfonos",
 		"PICTURE": "Imagen",
 		"SELECT_DATE": "Fechas rápidas",
+		"SHOW_ARCHIVED": "Mostrar registros de alumnos archivados",
 		"SINCE": "Desde",
 		"STUDENT": "Alumno",
 		"STUDENT_LIST": "Lista de alumnos",
