--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -110,6 +110,7 @@
 		"PHONES": "Téléphones",
 		"PICTURE": "Image",
 		"SELECT_DATE": "Dates rapides",
+		"SHOW_ARCHIVED": "Afficher les dossiers étudiants archivés",
 		"SINCE": "à partir de",
 		"STUDENT": "Étudiant",
 		"STUDENT_LIST": "Liste des étudiants",
