--- a/src/assets/i18n/it.json
+++ b/src/assets/i18n/it.json
@@ -110,6 +110,7 @@
 		"PHONES": "Ttelefoni",
 		"PICTURE": "Immagine",
 		"SELECT_DATE": "Date veloci",
+		"SHOW_ARCHIVED": "Mostra record studenti archiviati",
 		"SINCE": "da",
 		"STUDENT": "Studente",
 		"STUDENT_LIST": "Elenco degli studenti",
