Show/Hide Advanced filters

--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -1,6 +1,7 @@
 {
 	"ACTION_NOT_REVERSED": "Diese Aktion kann nicht rückgängig gemacht werden.",
 	"ADD_STUDENT": "Schüler hinzufügen",
+	"ADVANCED_FILTERS": "Erweiterte Filter",
 	"AND": " und ",
 	"APP_SUBTITLE": "Organisieren Sie Ihren Privatunterricht",
 	"APP_TITLE": "Aula 13",
