--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -1,6 +1,7 @@
 {
 	"ACTION_NOT_REVERSED": "This action cannot be reversed.",
 	"ADD_STUDENT": "Add student",
+	"ADVANCED_FILTERS": "Advanced Filters",
 	"AND": " and",
 	"APP_SUBTITLE": "Organize your private lessons",
 	"APP_TITLE": "Aula 13",
