--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -1,6 +1,7 @@
 {
 	"ACTION_NOT_REVERSED": "Esta acción no podrá ser revertida",
 	"ADD_STUDENT": "Añadir alumno",
+	"ADVANCED_FILTERS": "Filtros avanzados",
 	"AND": " y",
 	"APP_SUBTITLE": "Organiza tus clases particulares",
 	"APP_TITLE": "Aula 13",
