--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -1,6 +1,7 @@
 {
 	"ACTION_NOT_REVERSED": "Cette action ne peut pas être annulée.",
 	"ADD_STUDENT": "Ajouter un étudiant",
+	"ADVANCED_FILTERS": "Filtres avancés",
 	"AND": " et",
 	"APP_SUBTITLE": "Organisez vos cours particuliers",
 	"APP_TITLE": "Aula 13",
