--- a/src/assets/i18n/it.json
+++ b/src/assets/i18n/it.json
@@ -1,6 +1,7 @@
 {
 	"ACTION_NOT_REVERSED": "Questa azione non può essere annullata.",
 	"ADD_STUDENT": "Aggiungi studente",
+	"ADVANCED_FILTERS": "Filtri avanzati",
 	"AND": " e",
 	"APP_SUBTITLE": "Organizza le tue lezioni private",
 	"APP_TITLE": "Aula 13",
