--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -98,6 +98,7 @@
 			"SECONDARY": "Secundaria",
 			"SUPERIOR": "Superior"
 		},
+		"CUSTOM_DATES": "Intervalo personalizado",
 		"DATE": "Fecha",
 		"FATHERS_NAME": "Nombre del padre",
 		"GENDER": "Género",
