--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -98,6 +98,7 @@
 			"SECONDARY": "Lycée",
 			"SUPERIOR": "Supérieur"
 		},
+		"CUSTOM_DATES": "Intervalle personnalisé",
 		"DATE": "Date",
 		"FATHERS_NAME": "Nom du père",
 		"GENDER": "Genre",
