--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -98,6 +98,7 @@
 			"SECONDARY": "Gymnasium",
 			"SUPERIOR": "Superior"
 		},
+		"CUSTOM_DATES": "Benutzerdefiniertes Intervall",
 		"DATE": "Datum",
 		"FATHERS_NAME": "Name des Vaters",
 		"GENDER": "Geschlecht",
