Toast to go created entity

--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -239,6 +239,7 @@
 	"SAVE": "Speichern",
 	"SEARCH_DAY": "Tagebuch suchen",
 	"SEARCH_STUDENT": "Student suchen",
+	"SEE": "Siehe",
 	"SELECT": "Auswählen",
 	"SETTINGS": "Konfiguration",
 	"SHOW_LESS": "Zeige weniger",
