--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -239,6 +239,7 @@
 	"SAVE": "Save",
 	"SEARCH_DAY": "Search diary",
 	"SEARCH_STUDENT": "Search student",
+	"SEE": "Watch",
 	"SELECT": "Select",
 	"SETTINGS": "Configuration",
 	"SHOW_LESS": "Show less",
