--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -239,6 +239,7 @@
 	"SAVE": "Guardar",
 	"SEARCH_DAY": "Buscar diario",
 	"SEARCH_STUDENT": "Buscar alumno",
+	"SEE": "Ver",
 	"SELECT": "Seleccionar",
 	"SETTINGS": "Configuración",
 	"SHOW_LESS": "Mostrar menos",
