--- a/src/assets/i18n/it.json
+++ b/src/assets/i18n/it.json
@@ -239,6 +239,7 @@
 	"SAVE": "Salvare",
 	"SEARCH_DAY": "Cerca nel diario",
 	"SEARCH_STUDENT": "Cerca studente",
+	"SEE": "Vista",
 	"SELECT": "Selezionare",
 	"SETTINGS": "Configurazione",
 	"SHOW_LESS": "Mostra di meno",
