--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -239,6 +239,7 @@
 	"SAVE": "Sauvegarder",
 	"SEARCH_DAY": "Rechercher dans le journal",
 	"SEARCH_STUDENT": "Recherche étudiant",
+	"SEE": "Regarder",
 	"SELECT": "sélectionner",
 	"SETTINGS": "La configuration",
 	"SHOW_LESS": "Montrer moins",
